# nexus

./: .gitignore  CMakeLists.txt  list_devices.h  p2p_machine_a.conf  p2p_machine_b.conf
common/system_utils/: UniqueFileLock.h  scope_guard.h  system_utils.cpp  system_utils.h
include/app/: p2p_client.h  p2p_group_owner.h
include/network/: network_sandbox.h  posix_link_configurator.h  sdbus_p2p_controller.h
scripts/: create_namespaces.sh  kill.sh  private_dbus.sh
src/: main.cpp
src/app/: p2p_client.cpp  p2p_group_owner.cpp
src/network/: list_devices.cpp  network_sandbox.cpp  posix_link_configurator.cpp  sdbus_p2p_controller.cpp
